Fix animation jumping bug.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -111,8 +111,6 @@
     height: 100%;
 }
 
-.publication-body img {}
-
 .publication-teaser {
     display: block;
     width: 512px;
